--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             const primogems = parseInt(document.getElementById("primogems").value);
             const intertwinedFates = parseInt(document.getElementById("intertwinedFates").value);
 			const pityCount = parseInt(document.getElementById("pityCount").value);
-			const weaponPityCount = parseInt(document.getElementById("pityCount").value);
+			const weaponPityCount = parseInt(document.getElementById("weaponPityCount").value);
 			const doesBigPity = document.getElementById("doesBigPityCheckbox").checked;
 			const doesWeaponBigPity = document.getElementById("doesWeaponBigPityCheckbox").checked;
 
